# op5

./: .env.example  .gitignore  LICENCE  LICENSE  README.md  app.config.ts  dev.ecosystem.config.cjs  ecosystem.config.cjs  eslint.config.js  gateway.ts  inno.iss  package.json  proxy.ts  roadmap.md  todo.md  tsconfig.json  vite.config.app.ts  vite.config.web.ts
dev/: backup.ts  syncConfig.ts  translateLocales.ts
dev/docs/: coding-guide.md  helpful-links.md
dev/node/: buildApp.mts  buildNodePackage.mts
public/: ads.txt  license.txt  manifest.json  privacy-policy.txt  terms-of-service.txt
public/locales/: ar.json  en.json  es.json  hi.json  id.json  ja.json  ru.json  zh.json
sandbox/: main.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/frontend/: index.html  main.tsx
src-tauri/src/frontend/desktop/pages/: Home.tsx
src/_common/helpers/: getEnv.ts  terminateApp.ts
src/_common/pages/: ComingSoon.tsx  NotFound.tsx
src/backend/_common/: instances.ts
src/backend/api/: instances.ts  server.ts
src/backend/auth/: instances.ts  server.ts
src/backend/cdn/: instances.ts  server.ts
src/backend/main/: instances.ts  server.ts
src/backend/status/: instances.ts  server.ts
src/backend/studio/: instances.ts  server.ts
src/backend/support/: instances.ts  server.ts
src/frontend/: main.html  status.html  studio.html  support.html
src/frontend/_common/: i18n.ts
src/frontend/main/: main.tsx
src/frontend/status/: main.tsx
src/frontend/studio/: Layout.tsx  main.tsx
src/frontend/support/: main.tsx
src/integrations/discord/: client.ts
(+280 files in other folders)
